--- a/css/main.css
+++ b/css/main.css
@@ -23,26 +23,26 @@
     z-index: 100;
 }
 .loading img{
-    position: fixed;
+    /* position: fixed;
     left: 50%;
     top: 35%;
     width: 200px;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%); */
 }
 .loading h5{
-    position: fixed;
+    /* position: fixed;
     left: 50%;
     top: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%); */
     font-style: italic;
     text-align: center;
     color: #999999;
 }
 .loading h4{
-    position: fixed;
+    /* position: fixed;
     left: 50%;
     top: 60%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%); */
     font-style: italic;
     text-align: center;
     color: #3676b6;
