--- a/css/main.css
+++ b/css/main.css
@@ -21,28 +21,30 @@
     top:0;
     background:#ffffff;
     z-index: 100;
+    animation: loading 1s linear forwards;
+    animation-delay: 3s;
 }
 .loading img{
-    /* position: fixed;
+    position: fixed;
     left: 50%;
     top: 35%;
     width: 200px;
-    transform: translate(-50%,-50%); */
+    transform: translate(-50%,-50%);
 }
 .loading h5{
-    /* position: fixed;
+    position: fixed;
     left: 50%;
     top: 50%;
-    transform: translate(-50%,-50%); */
+    transform: translate(-50%,-50%);
     font-style: italic;
     text-align: center;
     color: #999999;
 }
 .loading h4{
-    /* position: fixed;
+    position: fixed;
     left: 50%;
     top: 60%;
-    transform: translate(-50%,-50%); */
+    transform: translate(-50%,-50%);
     font-style: italic;
     text-align: center;
     color: #3676b6;
@@ -88,7 +90,10 @@ p{
     transform : rotate(0.04deg); 
 }
 
-
+@keyframes loading{
+    from{ opacity: 1;}
+    to{opacity: 0;}
+}
 @keyframes fadeIn{
     from{ opacity: 0;}
     to{opacity: 1;}
