--- a/css/qna.css
+++ b/css/qna.css
@@ -7,7 +7,7 @@
     text-align: center;
     border-radius: 10px;
     color: #fff;
-    font-size: 18px;
+    font-size: 16px;
     width: 80%;
 }
 
@@ -18,6 +18,7 @@
     display: block;
     width: 80%;
     border: none;
+    font-size: 12px;
 }
 
 .answerList:hover,
@@ -35,16 +36,16 @@
 
 .statusBar {
     height: 100%;
-    border-radius: 0 15px 15px 0;
-    box-shadow: 0 0 5px #746ccc;
+    border-radius: 0  0 8px 0 ;
+    /* box-shadow: 0 0 10px  #256cb3 */
     /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#db97d5+4,746ccc+100 */
-    background: #EC6574;
+    background: #256cb34b;
     /* Old browsers */
-    background: -moz-linear-gradient(top, #EC6574 4%, #746ccc 100%);
+    background: -moz-linear-gradient(top, #b3d9ff 4%, #256cb34b 100%);
     /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #EC6574 4%, #746ccc 100%);
+    background: -webkit-linear-gradient(top, #b3d9ff 4%, #256cb34b 100%);
     /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #EC6574 4%, #746ccc 100%);
+    background: linear-gradient(to bottom, #b3d9ff 4%, #256cb34b 100%);
     /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#db97d5', endColorstr='#746ccc', GradientType=0);
     /* IE6-9 */
