--- a/css/qna.css
+++ b/css/qna.css
@@ -1,16 +1,13 @@
 #qna {
     display: none;
 }
-
 .qBox {
     /* background-color: #fff; */
     text-align: center;
     border-radius: 10px;
     color: #fff;
-    font-size: 16px;
     width: 80%;
 }
-
 .answerList {
     background-color: #ffffff50;
     color: #333;
@@ -18,22 +15,19 @@
     display: block;
     width: 80%;
     border: none;
-    font-size: 12px;
+    font-size: 0.8em;
 }
-
 .answerList:hover,
 .answerList:focus {
     box-shadow: 0 0 20px #fff;
     color: #fff;
 }
-
 .status {
     height: 15px;
     width: 100%;
     /* background-color: #3676B6; */
     /* border-radius: 10px; */
 }
-
 .statusBar {
     height: 100%;
     border-radius: 0  0 8px 0 ;
@@ -49,5 +43,4 @@
     /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#db97d5', endColorstr='#746ccc', GradientType=0);
     /* IE6-9 */
-
 }
